src/components/ControlPanel/styles.module.css
.controlPanelContainer {
  height: calc(100% - 30px);
  padding: 30px 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.buttonContainer {
  display: flex;
  justify-content: flex-end;
  column-gap: 20px;
  margin-bottom: 20px;
}

.tagsContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

